applications/services/tangled/appview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appview
  namespace: tangled
  labels:
    app.kubernetes.io/name: tangled-appview
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tangled-appview
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tangled-appview
    spec:
      imagePullSecrets:
        - name: atcr-pull
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: appview
          image: atcr.io/tangled.org/appview:v1.15.0-alpha
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
          startupProbe:
            tcpSocket:
              port: 3000
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: 3000
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: appview-data
