applications/services/tangled/appview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appview
  namespace: tangled
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tangled-appview
  ports:
    - name: http
      port: 3000
      targetPort: 3000
